sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:9: error: ':' expected but ')' found.
def deplace(pos) {
               ^InsertBaseball:27: error: identifier expected but '}' found.
}
^