sort.baseball.InsertBaseball.scala.code
override def run() {
  deplace(1)
}

def couleurJoueur(pos:Int):Int = {
  return getCouleurJoueur(pos/2, pos%2)
}

def deplace(pos) {
  deplace(pos/2, pos%2)
}

def trouveTrou():Int {
  return 2*getTrouBase()+getTrouPosition()
}